@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-10T01:04:09Z",
+  "timestamp" : "2024-09-15T01:11:07Z",
   "count_outdated" : 497,
   "uniques_outdated" : 324,
-  "count" : 498,
-  "uniques" : 325,
+  "count" : 500,
+  "uniques" : 327,
   "clones" : [
     {
       "timestamp": "2024-09-06T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-14T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
